# QTSolver

./: CMakeLists.txt
Solver/: CMakeLists.txt  solver.cpp  solver.h  test.cpp
SolverInterface/: CMakeLists.txt  solver_interface.h  solver_wrap.cpp  solver_wrap.h
